2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #1335511, where redefining a symbol silently corrupts
  the COFF relocations

2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to return non-zero for invalid command-line arguments

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Implemented warning for program code overflow
  * [gpasm] Implemented __maxrom directive (but not __badrom)
  * [gputils] Removed 16c747 (doesn't exist) and added 16f747
  * [gputils] Fixed wrong address in 16c771.lkr

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Minor fix to previous update, assume 0 instead of 1 for "res"
  directive argument (size).

2007-06-19 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed behavior of undefined expressions on the first pass to
  assume 0 as in MPASM (affects strange "differ on second pass" cases like
  bug #1058509)

2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to allow blank parameters on macro invocation, substituting
  nothing (not even empty quotes) as in MPASM

2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gplink] Fixed bug #1472396, error on empty comment line in LKR script

2007-06-17 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Limited string->character coercion of 1-length string literals to
  contexts where syntax doesn't permit strings
  * [gpasm] Allowed special escape sequences (like hex codes) in character
  literals. Old behavior would silently return incorrect result.

2007-06-14 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #897875, assertion failed instead of error for
  substitution of #define label without a value
  * [gpasm] Fixed minor bug with ignored parameter in check_defines

2007-06-12 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Patch by Michael Ballbach to add support for CONFIG directive

2007-06-12 David Barnett <daviebdawg@gmail.com>